<resources>
    <string name="app_name">Whatsapp Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Time">Time</string>
    <string name="User_Name">User name</string>
    <string name="Chat">Chat\n</string>
    <string name="new_group">New Group\n</string>
    <string name="new_broadcast">New Broadcast</string>
    <string name="linked_devices">Linked Devices</string>
    <string name="starred_messages">Stsrred Messages</string>
    <string name="payments">Payments</string>
    <string name="settings">Settings</string>
    <string name="status_privacy">Status Privacy</string>
    <string name="message">Message</string>
    <string name="Person">Person\n</string>
    <string name="status">Status</string>
    <string name="channels">Channels</string>
    <string name="find_channels">Find Channels</string>
    <string name="time">Time</string>
    <string name="chat">Chat</string>
    <string name="channel_name">Channel Name</string>
    <string name="follow">Follow</string>
</resources>