<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivImage"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:scaleType="fitXY"
        android:padding="5dp"
        android:src="@drawable/img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/llMain"
        app:shapeAppearanceOverlay="@style/Circle" />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/llMain"
        app:layout_constraintStart_toEndOf="@id/ivImage">

        <TextView
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/User_Name"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chat"
            android:id="@+id/chatMsg"
            android:layout_marginStart="5dp"
            android:textSize="15sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/time"
            android:text="@string/time"
            android:textSize="10sp"
            android:padding="10dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>