<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="5dp"
    android:layout_marginVertical="5dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivImageview"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:scaleType="fitXY"
        android:padding="5dp"
        android:src="@drawable/img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/Circle" />


    <LinearLayout
        android:id="@+id/llLinearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/ivImageview">

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/User_Name"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Chat"
            android:id="@+id/tvchatMsg"
            android:layout_marginStart="5dp"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Time"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>