<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ChatFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:id="@+id/tvStatus"
            android:textSize="30sp"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/rvStatus"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/ivPopUpMenu"
            android:src="@drawable/dots"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/rvStatus"
            app:layout_constraintTop_toBottomOf="@id/tvStatus"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channels"
            android:id="@+id/tvChannels"
            android:textSize="30sp"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/rvStatus"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/ivAdd"
            android:src="@drawable/baseline_add_24"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/rvStatus"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/rvChannels"
            app:layout_constraintTop_toBottomOf="@id/tvChannels"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_channels"
            android:id="@+id/tvFindChannels"
            android:textSize="30sp"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/rvChannels"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/ivSeeAll"
            android:src="@drawable/baseline_arrow_forward_ios_24"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/rvChannels"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/rvFindChannels"
            app:layout_constraintTop_toBottomOf="@id/tvFindChannels"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Editbutton"
            android:src="@drawable/edit_icon"
            android:backgroundTint="@color/Grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/Camerabutton"
            android:layout_margin="10dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Camerabutton"
            android:src="@drawable/photo_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="10dp"
            android:padding="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>